# HFT

./: .env  .gitignore  README.md  hello.py  launch.sh  pyproject.toml
curating/: curating.ipynb  mid_price.py  notes.md  viz.ipynb
data/curating/: copulabis.py  copulas.ipynb  copulasbis.py  correlation.ipynb  correlation.py  curating.ipynb  curating.py  extract_vol_process.ipynb  extract_vol_process.py  gaussiantest.ipynb  gaussiantest.py  gaussiantestwithoutviz copy.py  gaussiantestwithoutviz.ipynb  gaussiantestwithoutviz.py  mid_price.py  quick_hawkes_google.py  stationnarity.py
data/hawkes_transform/: hawkes_curating_bis.py
models/: __init__.py
models/hawkes/: hawkes.py
models/hurst/: hurst_estimation.py
models/jump/: jump.py
models/summary/: summarystatistics.py
report/: former.tex  report.tex  table_stats.tex
results/hawkes/: run1.py  runinfo.txt
results/summarystats/: AAL_stats.json  AAPL_stats.json  AMRX_stats.json  AMZN_stats.json  ANGO_stats.json  APLT_stats.json  ASAI_stats.json  AVDX_stats.json  BGC_stats.json  CGAU_stats.json  CSX_stats.json  CXW_stats.json  CX_stats.json  DBI_stats.json  ERIC_stats.json  GBDC_stats.json  GCMG_stats.json  GEO_stats.json  GOOGL_stats.json  GRAB_stats.json  GT_stats.json  HLMN_stats.json  HL_stats.json  IEP_stats.json  IE_stats.json  INTC_stats.json  IOVA_stats.json  ITUB_stats.json  KHC_stats.json  LBTYB_stats.json  LCID_stats.json  LION_stats.json  MLCO_stats.json  MSFT_stats.json  NTAP_stats.json  PBI_stats.json  PSNY_stats.json  PTEN_stats.json  PTON_stats.json  (+8 more)
tests/: test_env.py  test_hawkes.py
(+8 files in other folders)
